--- a/CRUD-aluno/EM/EM.Web/Properties/launchSettings.json
+++ b/CRUD-aluno/EM/EM.Web/Properties/launchSettings.json
@@ -1,21 +1,17 @@
-﻿{
-  "iisSettings": {
-    "windowsAuthentication": false,
-    "anonymousAuthentication": true,
-    "iisExpress": {
-      "applicationUrl": "http://localhost:25385",
-      "sslPort": 44371
-    }
-  },
+{
   "profiles": {
+    "WSL": {
+      "commandName": "WSL2",
+      "distributionName": ""
+    },
     "EM.Web": {
       "commandName": "Project",
-      "dotnetRunMessages": true,
       "launchBrowser": true,
-      "applicationUrl": "https://localhost:7200;http://localhost:5032",
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
-      }
+      },
+      "remoteDebugEnabled": false,
+      "applicationUrl": "https://localhost:7187;http://localhost:5261"
     },
     "IIS Express": {
       "commandName": "IISExpress",
@@ -23,6 +19,14 @@
       "environmentVariables": {
         "ASPNETCORE_ENVIRONMENT": "Development"
       }
+    }
+  },
+  "iisSettings": {
+    "windowsAuthentication": false,
+    "anonymousAuthentication": true,
+    "iisExpress": {
+      "applicationUrl": "http://localhost:65470",
+      "sslPort": 44371
     }
   }
 }
